<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"/>
    <EditText
        android:id="@+id/editText_EmailCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/insira_um_e_mail" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Senha"/>
    <EditText
        android:id="@+id/editText_SenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/insira_uma_senha" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Repetir_senha"/>
    <EditText
        android:id="@+id/editText_SenhaRepetirCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/Repita_a_Senha" />

    <Button
        android:id="@+id/button_CadastroUsuario"
        android:layout_width="200dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/Cadastrar"/>
    <Button
        android:id="@+id/button_Cancelar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Cancelar"/>
</LinearLayout>